[project]
name = "aorus-rag-assistant"
version = "0.1.0"
description = "A lightweight, high-performance RAG assistant for GIGABYTE AORUS MASTER 16 AM6H, optimized for 4GB VRAM limits."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "llama-cpp-python",
    "sentence-transformers",
    "numpy",
    "nvidia-ml-py",
]

